--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.px1 {
+  padding: 0 1rem 0 1rem;
+}
+
+.mt2 {
+  margin-top: 2rem;
+}
